# human_activity_labeling

feature_generation_pcl/: CMakeLists.txt  run_format_data.sh
feature_generation_pcl/src/: HOG.cpp  extractObjectPointclouds.cpp  featureGenerationForFrames.cpp  featureGenerationForSegments.cpp  frame.cpp  getObjHandTrajectories.cpp  get_skel_segments.cpp  pointcloudClustering.h  readData.cpp
